Sat Dec  6 13:08:36 PST 2003	Peter Deacon <peterd@iea-software.com>
	* include/tds.h src/tds/query.c src/odbc/odbc.c:
	- fixed don't look for placeholders in comments
	- bad assert numresults between prepare and exec
	* src/tds/mem.c src/tds/token.c:
	- disconnect on unknown marker

Sat Dec  6 17:35:31CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/unittests/genparams.c: improve

Sat Dec  6 14:43:1 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/tds/convert.c src/tds/numeric.c:
	* src/tds/query.c src/tds/token.c src/tds/unittests/convert.c:
	- some optimization for money
	- improve binary -> char conversions performance
	* src/tds/unittests/dataread.c: test bif MONEY value

Sat Dec  6 11:55:42 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/convert.c src/tds/numeric.c:
	* src/tds/unittests/dataread.c:
	- fixed money rounding
	- fixed conversion money -> char (only 2 decimal digits)
	- improve test on money data
	- use TDS_INT8 if available improving money -> char performance

Fri Dec  5 23:00:31 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* vms/config_h.vms vms/descrip_mms.template:
	- applied Craig A. Berry patch (VMS update)

Fri Dec  5 15:23:48 EST 2003	JK Lowden <jklowden@schemamania.org>
	* src/tds/numeric.c convert(money,char) to 2 decimal places

Thu Dec 04 23:27:09 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* freetds.conf: updated removing old configurations

Thu Dec 04 23:03:12 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/token.c: make "make check" happy even for Sybase

Thu Dec 04 12:05:10 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/unittests/t0016.c: fixed make distcheck
	* src/tds/token.c: fix for raiserror statement

Wed Dec 03 11:41:45 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/query.c: support for emulated prepare under TDS 4.2

Wed Dec 03 11:01:46 CET 2003	Frediano Ziglio <freddy77@angelfire.com>